--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div data-aos="fade-up" class="information-bloque">
         <img src="./figuras/copas.png" alt="">
         <h3>Fiesta</h3>
-        <p>21:00 hs -  Lot eventos. <br> Camino de la carrindanga N° 3802 – Bahía Blanca..</p>
+        <p>21:00 hs -  Lot eventos. <br> Camino de la carrindanga <br> N° 3802 – Bahía Blanca.</p>
         <a class="boton" href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBBzI4NGowajeoAgCwAgA&um=1&ie=UTF-8&fb=1&gl=ar&sa=X&geocode=Kd_JHlGVpO2VMfNYuHpfQyu2&daddr=Cam.+de+la+Carrindanga+3802,+B8000+Bah%C3%ADa+Blanca,+Provincia+de+Buenos+Aires">CÓMO LLEGAR</a>
       </div>
 
