--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <img src="./figuras/playlist.png" alt="">
     <h3>Playlist</h3>
     <p>Nos interesa tu opinión, ¡elegí el tema que no puede faltar en la fiesta! </p>
-    <a class="boton" href="https://open.spotify.com/playlist/7cyPUo23dUiM56RN95xM5s?si=kymrdRkUR9Oi2tKD0JE1HA&pt=3d045c83c89f4d40fb7e4e1acdd32506&pi=u-fn4Ki0-NR6qr">PLAYLIST</a>
+    <a class="boton" href="https://forms.gle/poe6gLFUHNNtDiiv6">RECOMENDAR</a>
  <br>
   </div>
 
