--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
      
     </div>
      <p>Hace clic para copiar los datos. <br> Titular: 
-      Meli, Leandro Jose</p>
+      Meli, Leonardo Jose</p>
   </div>
 
 </div>  
